<resources>
    <string name="app_name">TheGreenWay</string>
    <string name="ui_time_value">%s мин</string>
    <string name="ui_with_child">Доступно с детьми</string>
    <string name="ui_with_animal">Доступно с животными</string>
    <string name="ui_with_disabilities">Доступно для людей с ограниченными возможностями</string>
    <string name="ui_approved_by_team">Проверено и одобрено командой\n\"The Green Way\"</string>
    <string name="ui_title_map">Карта</string>
    <string name="ui_title_favorites">Избранное</string>
    <string name="ui_title_account">Профиль</string>
    <string name="ui_version_label">Версия приложения %s</string>
    <string name="ui_yandex_button">Условия использования Яндекс.Карт</string>
    <string name="ui_share_button">Рассказать друзьям</string>
    <string name="ui_share_text">Привет, мне понравилось мобильное приложение для поиска маршрутов по Беларуси. Скачай и ты, советую:\nВ Play Market - https://play.google.com/store/apps/details?id=%s</string>
    <string name="ui_support_button">Написать в тех. поддержку</string>
    <string name="ui_app_description">Спасибо, что пользуетесь нашим приложением. Мы стараемся сделать все в лучшем виде! Все вопросы и предложения просим присылать в нашу тех. поддержку</string>
    <string name="ui_auth_button">Авторизоваться</string>
    <string name="ui_noname_user">Неизвестный путешественник</string>
    <string name="ui_exit_button">Выйти из аккаунта</string>
    <string name="ui_open_details">Подробнее</string>
    <string name="ui_need_auth">Необходимо авторизоваться</string>
</resources>
