<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_circle_background_color="@android:color/white"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="2dp"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/userPhoto"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/userPhoto"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName"/>

            <TextView
                android:id="@+id/authButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/space"
                android:layout_marginEnd="@dimen/space"
                android:background="@drawable/background_button"
                android:drawableStart="@drawable/ic_auth"
                android:drawablePadding="@dimen/space"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/ui_auth_button"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/userEmail"/>

            <TextView
                android:id="@+id/exitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/space"
                android:layout_marginEnd="@dimen/space"
                android:background="@drawable/background_button"
                android:drawableStart="@drawable/ic_exit"
                android:drawablePadding="@dimen/space"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/ui_exit_button"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/userEmail"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                app:barrierDirection="bottom"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="authButton, exitButton"
                android:layout_width="wrap_content" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:text="@string/ui_app_description"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/barrier"/>

            <TextView
                android:id="@+id/supportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space"
                android:layout_marginEnd="@dimen/space"
                android:layout_marginTop="48dp"
                android:background="@drawable/background_button"
                android:drawableStart="@drawable/ic_support"
                android:drawablePadding="@dimen/space"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/ui_support_button"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"/>

            <TextView
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space"
                android:layout_marginEnd="@dimen/space"
                android:layout_marginTop="@dimen/space.half"
                android:background="@drawable/background_button"
                android:drawableStart="@drawable/ic_share"
                android:drawablePadding="@dimen/space"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/ui_share_button"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/supportButton"/>

            <TextView
                android:id="@+id/yandexButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space"
                android:layout_marginEnd="@dimen/space"
                android:layout_marginTop="@dimen/space.half"
                android:background="@drawable/background_button"
                android:drawableStart="@drawable/ic_yandex"
                android:drawablePadding="@dimen/space"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/ui_yandex_button"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/shareButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        android:layout_marginBottom="@dimen/space"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        tools:text="Версия 1.1.2" />
</LinearLayout>
